--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
+  "homepage": "https://robinnong.github.io/personal-spending-tracker",
   "name": "personal-spending-tracker-redux",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "gh-pages": "^3.1.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
@@ -12,6 +14,8 @@
     "redux": "^4.0.5"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
