--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-redux": "^7.2.0",
     "react-scripts": "^3.4.3",
     "redux": "^4.0.5",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "typescript": "^4.0.2"
   },
   "scripts": {
     "predeploy": "npm run build",
